# rust-data-types

./: .gitignore  Cargo.toml
src/: lib.rs
src/daterange/: annual_date_range.rs  arbitrary_date_range.rs  bi_weekly_date_range.rs  date_range.rs  default_date_range.rs  mod.rs  monthly_date_range.rs  quarterly_date_range.rs  semi_annual_date_range.rs  semi_monthly_date_range.rs  weekly_date_range.rs
src/datetimerange/: date_time_range.rs  date_time_range_with_period_length.rs  mod.rs
src/dateutils/: date_utils.rs  mod.rs
src/numbers/: mod.rs  numbers.rs
src/timerange/: mod.rs  time_range.rs
src/util/: date_utils.rs
src/variance/: mod.rs  variance.rs
