[package]
name = "data_types"
version = "0.1.0"
edition = "2021"
authors = ["Jeff Stano <jeff@stano.com>"]
description = "A collection of data types"
license = "MIT"
repository = "https://github.com/jstano/data_types"
readme = "README.md"
keywords = ["data-types"]

[dependencies]
chrono = "0.4.41"
rstest = "0.26.1"
bigdecimal = "0.4.8"
num-traits = "0.2.19"
ordered-float = "5.0.0"
